# todo-api

./: .coverage  .env.backup_secure  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  create_todo.json  main.py  pyproject.toml  pyproject.toml.bak  test_categories_curl.sh
.claude/: settings.json
.claude/commands/: review-and-save.md
.claude/hooks/: .env.example  README.md  ai-task-analyzer-external.py.disabled  ai-task-analyzer-internal.py  pre-task-analyzer.py.disabled  technology-context-loader.py.disabled
.serena/: project.yml
.serena/memories/: api_endpoints_structure.md  code_style_conventions.md  documentation_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack_details.md
PRPs/: cache-ttl-configuration-prd.md  middleware-extraction-prd.md  test-registration-conflict-handling-prd.md
PRPs/planning/: action-plan-code-review-001.md  secret-key-fix-prd.md  tier-rate-limiting-cleanup-prd.md
alembic/: env.py
alembic/versions/: add_is_admin_to_users.py  add_tags_many_to_many.py  c5363c8bc7fb_initial_migration_create_users_.py
app/: config.py  database.py  dependencies.py  main.py  redis.py
app/api/: __init__.py  admin.py  auth.py  categories.py  tags.py  todos.py
app/middleware/: __init__.py  auth.py  error_handler.py  logging.py  monitoring.py  rate_limit.py  rate_limit_config.py  rate_limit_env_config.py  registry.py  request.py  security.py
app/models/: __init__.py  category.py  tag.py  todo.py  todo_tag.py  user.py
app/monitoring/: db_metrics.py  logging_config.py  metrics.py  redis_metrics.py  telemetry.py  tracing.py
app/schemas/: __init__.py  admin.py  base.py  category.py  tag.py  todo.py  user.py
app/services/: __init__.py  auth.py  cache.py  category.py  exceptions.py  login_rate_limit.py  tag.py  todo.py  token_blacklist.py
app/utils/: cache.py  jwt_utils.py  security.py
docker/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  validate-secrets.sh
docker/secrets/: .gitignore  README.md
docs/: ADR-001-remove-auth-middleware.md  Claude code docs.md  JWT_TOKEN_REVOCATION_SUMMARY.md  MCP Documenation.md  MIGRATION_TIER_RATE_LIMITING.md  MONITORING.md  PRP-FRAMEWORK.md  PYTHON-GUIDE.md  RATE-LIMITING.md
monitoring/: README.md  alerts.yml  docker-compose.yml  prometheus.yml
monitoring/dashboards/: dashboard.yml  todo-api-dashboard.json
scripts/: auto-review.sh  generate_secret_key.py
tests/: conftest.py
tests/integration/: test_auth_endpoints.py  test_auth_logout.py  test_auth_logout_simple.py  test_auth_rate_limit.py  test_caching_integration.py  test_categories_api.py  test_categories_api_simple.py  (+14 more)
(+40 files in other folders)
